# indexarr-rs

./: .woodpecker.yml  Cargo.toml  Dockerfile  RELEASE_NOTES_v0.3.1.md  SYNC_NETWORKING.md  bep-uplift.md  docker-compose.sync.yml  docker-compose.yml
.github/: CODEOWNERS
.github/workflows/: ci.yml  container.yml
ci/: migration-policy.sh
ci/issue-comments/: 4.md  5.md
ci/tasks/: comment-github-issues
crates/indexarr-announcer/: Cargo.toml
crates/indexarr-announcer/src/: lib.rs
crates/indexarr-bep28/: Cargo.toml
crates/indexarr-bep51/: Cargo.toml
crates/indexarr-bep51/src/: lib.rs
crates/indexarr-core/src/: config.rs  db.rs
crates/indexarr-dht/: Cargo.toml
crates/indexarr-dht/src/: bep51_sampler.rs  engine.rs  ingest.rs  resolver.rs  tracker_announce.rs
crates/indexarr-identity/src/: lib.rs
crates/indexarr-resolver-v2/: Cargo.toml
crates/indexarr-resolver-v2/src/: lib.rs
crates/indexarr-search/src/: lib.rs
crates/indexarr-sync/src/: epoch.rs
crates/indexarr-web/: Cargo.toml
crates/indexarr-web/src/: torznab.rs
crates/indexarr-web/src/routes/: records.rs
crates/indexarr-xmpp/src/: plaintext.rs
installer/: setup.ps1  windows.nsi
src/: main.rs
ui/: package-lock.json  package.json
website/docs/api/: openapi.json
