[package]
name = "indexarr-announcer"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
indexarr-core.workspace = true
tokio.workspace = true
tokio-util.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tracing.workspace = true
thiserror.workspace = true
chrono.workspace = true
hex.workspace = true
rand.workspace = true
url.workspace = true

# UDP tracker scrape (BEP 15) — same lib the resolver uses for peer discovery,
# pulled here so we can announce-with-counts against UDP-only trackers.
tracker_comms = { version = "0.1.6", package = "librtbit-tracker-comms", registry = "forgejo" }
librtbit-core = { version = "0.1.5", default-features = false, registry = "forgejo" }
anyhow.workspace = true
