[package]
name = "indexarr-dht"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
indexarr-core.workspace = true
indexarr-bep51 = { path = "../indexarr-bep51" }
indexarr-parser = { path = "../indexarr-parser" }
indexarr-classifier = { path = "../indexarr-classifier" }

# DHT library (re-exports Id20 from librtbit-core). Sourced from the Forgejo
# cargo registry to keep all librtbit-* deps unified across the workspace
# (resolver-v2 needs librtbit-peer-protocol which is Forgejo-only; the same
# crate from a second registry would be treated as distinct by cargo).
dht = { version = "0.1.4", package = "librtbit-dht", registry = "forgejo" }
librtbit-core = { version = "0.1.5", default-features = false, registry = "forgejo" }
bencode = { version = "0.1.5", package = "librtbit-bencode", registry = "forgejo" }
tracker_comms = { version = "0.1.6", package = "librtbit-tracker-comms", registry = "forgejo" }

# BEP 9 metadata fetcher (workspace-internal).
indexarr-resolver-v2 = { path = "../indexarr-resolver-v2" }

# HTTP client for tracker_comms + URL parsing for the tracker list.
reqwest.workspace = true
url.workspace = true

# Async
tokio.workspace = true
tokio-util.workspace = true
tokio-stream = "0.1"
futures = "0.3"

# Database
sqlx.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Util
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
rand.workspace = true
hex.workspace = true
sha1 = "0.11"
